--- a/test-xml/app/src/main/res/values/strings.xml
+++ b/test-xml/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="mp3list.undate">更新</string>
+    <string name="mp3list.about">关于</string>
+
 </resources>
